--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 $color-primary: rgba(240, 27, 13, 1);
 $color-light: #fff;
 $color-dark: rgba(0, 0, 0, 1);
+$color-gray: #828282;
+$color-title: rgba(31, 31, 31, 1);
 
 $font-family: 'Roboto Flex', sans-serif;
 $second-family: 'Manrope', sans-serif;
