--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -47,3 +47,52 @@ h1 {
   line-height: 112%;
   color: $color-light;
 }
+
+.news-tag {
+  font-family: $font-family;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: $color-dark;
+}
+
+.date {
+  font-family: $font-family;
+  font-weight: 300;
+  font-size: 12px;
+  color: $color-gray;
+}
+
+h3 {
+  font-family: $font-family;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 123%;
+  letter-spacing: -0.01em;
+  color: $color-title;
+}
+h4 {
+  font-family: $font-family;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: $color-dark;
+}
+
+h5 {
+  font-family: $font-family;
+  font-weight: 400;
+  font-size: 11px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: $color-dark;
+}
+
+h6 {
+  font-family: $font-family;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 125%;
+  color: $color-gray;
+}
