--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -64,6 +64,14 @@ h1 {
   color: $color-gray;
 }
 
+h2 {
+   font-family: $font-family;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 112%;
+  color: $color-light;
+}
+
 h3 {
   font-family: $font-family;
   font-weight: 700;
