--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,8 @@ $color-dark: rgba(0, 0, 0, 1);
 $color-gray: #828282;
 $color-title: rgba(31, 31, 31, 1);
 
+$input-border-color-light: rgba(255, 255, 255, 0.3);
+
 $font-family: 'Roboto Flex', sans-serif;
 $second-family: 'Manrope', sans-serif;
 $third-family: 'Montserrat', sans-serif;
