--- a/src/components/SocialLinks/links.scss
+++ b/src/components/SocialLinks/links.scss
@@ -1,4 +1,9 @@
 .socials {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
+  &__link {
+    &:hover  {
+      transform: scale(1.2);
+    }
   }
+}
