feat: add adaptability to 768

--- a/src/components/LatestNews/newscard.scss
+++ b/src/components/LatestNews/newscard.scss
@@ -10,6 +10,10 @@
     cursor: pointer;
   }
 
+   @media (max-width: 1200px) {
+     width: 360px;
+    }
+
   &__image-wrapper {
     position: relative;
   }
