--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-position: center;
   }
 
   &__logo {
@@ -26,21 +27,29 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      width: 1360px;
+      width: 72%;
       padding-top: 30px;
+      @media (max-width: 1150px) {
+        width: 90%;
+      }
     }
   }
 
   &__navigation {
     display: flex;
+    justify-content: flex-end;
     width: 690px;
     cursor: pointer;
+    gap: 50px;
 
     &-list {
       display: flex;
       justify-content: space-between;
       gap: 20px;
       width: 100%;
+      @media (max-width: 1150px) {
+        display: none;
+      }
     }
 
     &-item {
@@ -84,6 +93,10 @@
     &-list {
       display: flex;
       gap: 50px;
+
+       @media (max-width: 1150px) {
+        gap: 25px;
+      }
     }
 
     &-item {
