--- a/src/components/LatestNews/news.scss
+++ b/src/components/LatestNews/news.scss
@@ -3,20 +3,30 @@
     text-align: start;
     display: flex;
     padding-bottom: 30px;
-    width: 1320px;
+    width: 72%;
+    @media (max-width: 1200px) {
+      width: 100%;
+    }
   }
   &__content {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 40px;
+     @media (max-width: 1200px) {
+      margin: 40px 10px 40px 10px;
+    }
   }
   &__cards-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 1320px;
+    width: 72%;
     gap: 30px;
     row-gap: 60px;
+
+    @media (max-width: 1200px) {
+      width: auto;
+    }
   }
   &__trainers-list {
     display: grid;
@@ -24,5 +34,9 @@
     gap: 40px;
 
     margin: 75px;
+
+     @media (max-width: 1450px) {
+       grid-template-columns: 1fr 1fr;
+    }
   }
 }
