--- a/src/components/Promo/promo.scss
+++ b/src/components/Promo/promo.scss
@@ -9,6 +9,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @media (max-width: 768px) {
+      height: 276px;
+    }
   }
 
   &__text {
