--- a/src/components/Social/social.scss
+++ b/src/components/Social/social.scss
@@ -7,6 +7,11 @@
     justify-content: center;
     padding: 70px;
     gap: 30px;
+
+    @media (max-width: 768px) {
+      padding: 70px 10px;
+      gap: 10px;
+    }
   }
 
   &__links {
@@ -17,6 +22,15 @@
     align-items: center;
     justify-content: center;
     gap: 25px;
+
+    @media (max-width: 1200px) {
+      width: 600px;
+      gap: 20px;
+    }
+    @media (max-width: 768px) {
+      width: 510px;
+      gap: 10px;
+    }
   }
 
   &__subscription {
@@ -27,6 +41,15 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    @media (max-width: 1400px) {
+      flex-direction: column;
+      width: 400px;
+      gap: 15px;
+    }
+
+    @media (max-width: 768px) {
+      width: 225px;
+    }
   }
   &__block {
     display: flex;
@@ -37,6 +60,10 @@
     background-color: unset;
     border-bottom: 1px solid $input-border-color-light;
     width: 380px;
+
+    @media (max-width: 768px) {
+      width: 200px;
+    }
   }
   &__button {
     border-radius: 100px;
