--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -17,7 +17,7 @@
   color: $color-light;
 }
 
-.news-tag {
+.text-lg-uppercase {
   font-family: $font-family;
   font-weight: 400;
   font-size: 18px;
