--- a/src/components/Social/social.scss
+++ b/src/components/Social/social.scss
@@ -5,12 +5,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     padding: 70px;
     gap: 30px;
 
     @media (max-width: 768px) {
       padding: 70px 10px;
       gap: 10px;
+    }
+    @media (max-width: 760px) {
+      flex-direction: column;
     }
   }
 
@@ -31,6 +35,11 @@
       width: 510px;
       gap: 10px;
     }
+    @media (max-width: 760px) {
+      flex-wrap: wrap;
+      align-content: center;
+      width: 100%;
+    }
   }
 
   &__subscription {
@@ -50,11 +59,17 @@
     @media (max-width: 768px) {
       width: 225px;
     }
+    @media (max-width: 760px) {
+      width: 100%;
+    }
   }
   &__block {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    @media (max-width: 760px) {
+      width: 100%;
+    }
   }
   &__input {
     background-color: unset;
