--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -7,18 +7,29 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    @media (max-width: 520px) {
+      height: 504px;
+      
+    }
   }
   &__info {
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: space-evenly;
+     @media (max-width: 520px) {
+      flex-direction: column;
+      gap: 30px;
+    }
   }
 
   &__ads {
     display: flex;
     flex-direction: column;
     gap: 5px;
+     @media (max-width: 520px) {
+     align-items: center;
+    }
   }
   &__nav {
     color: $color-light;
@@ -29,11 +40,20 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+
+    @media (max-width: 520px) {
+     flex-direction: column;
+     gap: 10px;
+    }
   }
 
   &__company {
     display: flex;
     align-items: center;
     gap: 10px;
+  }
+
+  &__socials{
+    padding: 10px;
   }
 }
