--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,6 +10,12 @@
     flex-direction: column;
     justify-content: space-between;
     background-position: center;
+
+    @media (max-width: 320px) {
+      min-height: auto;
+      height: 250px;
+      background: url('../../assets/header/bg-s.png');
+    }
   }
 
   &__logo {
@@ -31,6 +37,9 @@
       padding-top: 30px;
       @media (max-width: 1150px) {
         width: 90%;
+      }
+      @media (max-width: 320px) {
+        padding-top: 20px;
       }
     }
   }
@@ -80,6 +89,11 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    @media (max-width: 320px) {
+      padding: 20px;
+      width: auto;
+    }
   }
 
   &__sport-navigation {
@@ -90,11 +104,16 @@
     justify-content: center;
     cursor: pointer;
 
+     @media (max-width: 320px) {
+      height: 45px;
+    }
+
     &-list {
       display: flex;
+      align-items: center;
       gap: 50px;
 
-       @media (max-width: 1150px) {
+      @media (max-width: 1150px) {
         gap: 25px;
       }
     }
