--- a/src/components/LatestNews/newscard.scss
+++ b/src/components/LatestNews/newscard.scss
@@ -13,6 +13,9 @@
    @media (max-width: 1200px) {
      width: 360px;
     }
+     @media (max-width: 370px) {
+     width: 320px;
+    }
 
   &__image-wrapper {
     position: relative;
