--- a/src/components/SocialLinks/links.scss
+++ b/src/components/SocialLinks/links.scss
@@ -1,9 +1,15 @@
 .socials {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
   &__link {
-    &:hover  {
+    &:hover {
       transform: scale(1.2);
     }
+  }
+
+  @media (max-width: 470px) {
+    flex-wrap: wrap;
   }
 }
