refactor: rename and restructure files

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -33,6 +33,10 @@
   }
   &__nav {
     color: $color-light;
+    cursor: pointer;
+    &:hover{
+      color: $color-dark;
+    }
   }
 
   &__copyright {
