--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,7 +2,8 @@
 
 .header {
   &__content {
-    background: url('../../assets/header/bg.png');
+    background: $gradient-header, url('../../assets/header/bg.png');
+    mix-blend-mode: hard-light;
     object-fit: cover;
     background-repeat: no-repeat;
     min-height: 580px;
