--- a/src/components/LatestNews/newscard.scss
+++ b/src/components/LatestNews/newscard.scss
@@ -10,12 +10,12 @@
     cursor: pointer;
   }
 
-   @media (max-width: 1200px) {
-     width: 360px;
-    }
-     @media (max-width: 370px) {
-     width: 320px;
-    }
+  @media (max-width: 1200px) {
+    width: 360px;
+  }
+  @media (max-width: 370px) {
+    width: 320px;
+  }
 
   &__image-wrapper {
     position: relative;
@@ -36,10 +36,19 @@
   &--styled {
     height: 580px;
 
+    &::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: $gradient-card;
+      mix-blend-mode: multiply;
+    }
+
     .card__image {
       position: absolute;
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
     .card__content {
       position: absolute;
